force-app/main/default/objects/aecm__Architecture_Domain_Capability__c/aecm__Architecture_Domain_Capability__c.object-meta.xml
<CustomObject>
    <description>Used to form a many-to-many relationship between architecture domains and capabilities.</description>
    <label>Architecture Domain Capability</label>
    <nameField>
        <displayFormat>ADC-{mm}{yy}{00000}</displayFormat>
        <label>Architecture Capability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Architecture Domain Capabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>