force-app/main/default/objects/aecm__Architecture_Domain_Capability__c/fields/aecm__Architecture_Domain__c.field-meta.xml
<CustomField>
    <fullName>aecm__Architecture_Domain__c</fullName>
    <label>Architecture Domain</label>
    <referenceTo>aecm__Architecture_Domain__c</referenceTo>
    <relationshipName>Architecture_Capabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>