force-app/main/default/objects/aecm__Architecture_Domain_Capability__c/fields/aecm__Capability__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability__c</fullName>
    <label>Capability</label>
    <referenceTo>aecm__Capability__c</referenceTo>
    <relationshipName>Architecture_Capabilities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>