force-app/main/default/objects/aecm__Architecture_Domain_Capability__c/fields/aecm__Relation_Name__c.field-meta.xml
<CustomField>
    <fullName>aecm__Relation_Name__c</fullName>
    <formula>aecm__Capability__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relation Name</label>
    <type>Text</type>
</CustomField>